# proyectos_mdm_movil

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  vcpkg.json
qml/: GeoPackagePanel.qml  GpkgViewerDialog.qml  QgisGeneratorPanel.qml  main.qml
src/: geomanager.cpp  geomanager.h  main.cpp  qgisprojectgenerator.cpp  qgisprojectgenerator.h
